kubernetes/services/authelia.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: default
spec:
  tls:
    - hosts:
        - authelia.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: authelia.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`authelia.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
spec:
  forwardAuth:
    address: http://authelia:9091/api/verify?rd=https://authelia.${DOMAIN_NAME}/'
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
